--- a/src/modules/feedbacks/components/Reviews/Reviews.module.scss
+++ b/src/modules/feedbacks/components/Reviews/Reviews.module.scss
@@ -101,7 +101,7 @@
 .centerDiv {
   @include media(mobile) {
     height: 524px;
-    padding: 32px;
+    padding: 32px 0px;
     border-radius: 24px;
     background-color: $primary-background-accent-color;
   }
